--- a/styles/tweak.less
+++ b/styles/tweak.less
@@ -138,10 +138,10 @@
 }
 
 // tweak: { "category": "Header: Branding", "label" : "Color", "title" : "tweak-header-branding-site-title-color", "type" : "color", "target" : ".Header-branding", "showOnlyWhenPresent" : ".has-site-title:not(.ancillary-header-branding-position-hide) .Header:not(.Header--overlay) .Header-branding" }
-@tweak-header-branding-site-title-color: #111111;
+@tweak-header-branding-site-title-color: #32a852;
 
 // tweak: { "category": "Header: Branding", "label" : "Color (Overlay)", "title" : "tweak-header-overlay-branding-site-title-color", "type" : "color", "target" : ".Header-branding", "showOnlyWhenPresent" : ".has-site-title:not(.ancillary-header-branding-position-hide) .Header--overlay .Header-branding" }
-@tweak-header-overlay-branding-site-title-color: #111111;
+@tweak-header-overlay-branding-site-title-color: #32a852;
 
 
 // -----------------------------------------
@@ -836,7 +836,7 @@
 // tweak: { "category" : "Footer", "label" : "Alignment", "title" : "tweak-footer-stacked-alignment", "type" : "dropdown", "options" : [ "Left", "Center", "Right" ], "default" : "Left", "target" : ".Footer", "showOnlyWhenPresent" : ".tweak-footer-show.tweak-footer-layout-stacked" }
 
 // tweak: { "category": "Footer", "label": "Background Color", "title" : "tweak-footer-color", "type" : "color", "target" : ".Footer", "showOnlyWhenPresent": ".tweak-footer-show" }
-@tweak-footer-color: #000000;
+@tweak-footer-color: #32a852;
 
 
 
